Javaカレーカウンター

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <li>Twitterやってないです</li>
         </ul>
     </div>
-
+    <p>
+        <a href="./works/index.html">作品一覧</a>
+    </p>
 </body>
 </html>
