しくじりとふとふ

--- a/works/index.html
+++ b/works/index.html
@@ -8,7 +8,7 @@
   <h1>作品一覧</h1>
 
   <div>
-    <h2><a href="/works/counter.html">カウンター</a></h2>
+    <h2><a href="./counter.html">カウンター</a></h2>
     <p>Javaカレーの入門としてカウンターを作りました</p>
   </div>
 </body>
